Set min-height of fbox to prevent button collapse

--- a/style.css
+++ b/style.css
@@ -403,7 +403,9 @@ article div.entry-content div.button {
 
   article div.entry-content div.fbox {
     position: relative ;
-    padding: 1em; clear: right;
+    padding: 1em; 
+    clear: right;
+    min-height: 4em;
     }
 
   article div.entry-content div.fbox.lastfbox {
@@ -413,11 +415,13 @@ article div.entry-content div.button {
   article div.entry-content  div.ftext { 
     padding-left: 8em;
     }
+
   article div.entry-content div.ftext span {
     border-right: solid black 1px;
 	padding-right: .5em;
 	margin-right: .5em;
 	}
+
   article div.entry-content div.ftext span.last {
     border-right: none;
 	}
